--- a/static/style.css
+++ b/static/style.css
@@ -55,13 +55,17 @@ body {
   width: 97%;
   font-size: 210px;
   text-align: center;
-  margin-top: 100px; /* Add initial margin */
+  margin-top: 120px; /* Add initial margin */
   color: black;
   background-color: #9FFFCB;
   padding: 20px;
   transition: font-size 0.3s, margin-top 0.3s; /* Add smooth transition for font size and margin top */
 }
 
+.mainTitle.small {
+  font-size: 40px;
+  margin-top: 20px;
+}
 
 .nav-container{
     margin-left: 25px;
@@ -136,6 +140,7 @@ body {
     align-items: center;
     max-width: 400px;
     max-height: 400px;
+    border-radius: 10px;
 }
 
 .text, .image {
