--- a/static/style.css
+++ b/static/style.css
@@ -443,3 +443,160 @@ table td, th {
     background-color: #dc3545; /* Cancel button background color */
     margin-top: 10px;
   }
+
+
+  /* start of chatbot css */
+  .chatbutton {
+    margin-right: 20px;
+    height: 50px;
+    width: 50px;
+    color: #fff;
+    background: blue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+  }
+
+  .chatbutton span {
+    position: absolute;
+  }
+
+  .showchatbot .chatbutton span:first-child,
+  .chatbutton span:last-child {
+    opacity: 0;
+  }
+
+  .showchatbot .chatbutton span:last-child {
+    opacity: 1;
+  }
+
+  .chatbot {
+    position: fixed;
+    right: 40px;
+    bottom: 100px;
+    width: 420px;
+    background: #fff;
+    border-radius: 15px;
+    overflow: hidden;
+    transform: (scale(0.5));
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .showchatbot .chatbot {
+    transform: (scale(1));
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .chatbot header {
+    background: blue;
+    padding: 16px 0;
+    text-align: center;
+  }
+
+  .chatbot header h2  {
+    color: #fff;
+    font-size: 1.4rem;
+  }
+
+  .chatbot ul {
+    list-style-type: none;
+    padding: 5px;
+    margin: 0;
+  }
+
+  .chatbot .chatbox {
+    height: 510px;
+    overflow-y: auto;
+    padding: 30px 20px 70px;
+  }
+
+  .chatbox .chat {
+    display: flex;
+  }
+
+  .chatbox .outgoing {
+    margin: 20px 0;
+    justify-content: flex-end;
+  }
+
+  .chatbot .chat p {
+    color: #fff;
+    max-width: 75%;
+    font-size: 0.95rem;
+    padding: 12px 16px;
+    border-radius: 10px 10px 0 10px;
+    background: blue;
+  }
+
+  .chatbot .incoming p {
+    color: #000;
+    border-radius: 10px 10px 10px 0;
+    background: #f2f2f2;
+  }
+
+  .chatbot .incoming span {
+    height: 32px;
+    width: 32px;
+    color: #fff;
+    align-self: flex-end;
+    background: blue;
+    text-align: center;
+    line-height: 32px;
+    border-radius: 4px;
+    margin: 0 10px 7px 0;
+  }
+
+  .chatbot .messageinput {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    background: #fff;
+    padding: 5px 20px;
+    border-top: 1px solid #ccc;
+  }
+
+  .messageinput textarea {
+    height: 22px;
+    width: 82%;
+    border: none;
+    outline: none;
+    font-size: 0.95rem;
+    resize: none;
+    padding: 16px 15px 16px 0;
+  }
+
+  .messageinput span {
+    align-self: flex-end;
+    height:55px;
+    line-height: 55px;
+    color: blue;
+    font-size: 1.35rem;
+    cursor: pointer;
+    visibility: hidden;
+  }
+
+  .messageinput textarea:valid ~ span {
+    visibility: visible;
+  }
+
+@media(max-width: 490px) {
+  .chatbot {
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+  .chatbot .chatbox {
+    height: 90%;
+
+  }
+}
