--- a/static/style.css
+++ b/static/style.css
@@ -451,7 +451,7 @@ table td, th {
     height: 50px;
     width: 50px;
     color: #fff;
-    background: blue;
+    background: #114454;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -479,12 +479,13 @@ table td, th {
     right: 40px;
     bottom: 100px;
     width: 420px;
-    background: #fff;
+    background: #114454;
     border-radius: 15px;
     overflow: hidden;
     transform: (scale(0.5));
     opacity: 0;
     pointer-events: none;
+    font-family: 'Metrophobic', sans-serif;
   }
 
   .showchatbot .chatbot {
@@ -494,13 +495,13 @@ table td, th {
   }
 
   .chatbot header {
-    background: blue;
+    background: #18637B;
     padding: 16px 0;
     text-align: center;
   }
 
   .chatbot header h2  {
-    color: #fff;
+    color: black;
     font-size: 1.4rem;
   }
 
@@ -511,7 +512,7 @@ table td, th {
   }
 
   .chatbot .chatbox {
-    height: 510px;
+    height: 400px;
     overflow-y: auto;
     padding: 30px 20px 70px;
   }
@@ -526,12 +527,12 @@ table td, th {
   }
 
   .chatbot .chat p {
-    color: #fff;
+    color: black;
     max-width: 75%;
     font-size: 0.95rem;
     padding: 12px 16px;
     border-radius: 10px 10px 0 10px;
-    background: blue;
+    background: #18637B;
   }
 
   .chatbot .incoming p {
@@ -545,7 +546,7 @@ table td, th {
     width: 32px;
     color: #fff;
     align-self: flex-end;
-    background: blue;
+    background: #18637B;
     text-align: center;
     line-height: 32px;
     border-radius: 4px;
@@ -577,7 +578,7 @@ table td, th {
     align-self: flex-end;
     height:55px;
     line-height: 55px;
-    color: blue;
+    color: #18637B;
     font-size: 1.35rem;
     cursor: pointer;
     visibility: hidden;
@@ -597,6 +598,5 @@ table td, th {
   }
   .chatbot .chatbox {
     height: 90%;
-
   }
 }
