some styling for the chatbox

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
         {% endif %}
       </div>
     </div>
+    <!-- div for the chatbot -->
     <div class="chatbot">
       <header>
         <h2>placeholder</h2>
