--- a/static/style.css
+++ b/static/style.css
@@ -459,8 +459,11 @@ table td, th {
     outline: none;
     cursor: pointer;
     border-radius: 50%;
+    transition: all 0.2s ease;
   }
-
+  .showchatbot .chatbutton {
+    transform: rotate(90deg);
+  }
   .chatbutton span {
     position: absolute;
   }
@@ -485,7 +488,9 @@ table td, th {
     transform: (scale(0.5));
     opacity: 0;
     pointer-events: none;
+    transform-origin: bottom right;
     font-family: 'Metrophobic', sans-serif;
+    transition: all 0.1s ease;
   }
 
   .showchatbot .chatbot {
@@ -514,7 +519,7 @@ table td, th {
   .chatbot .chatbox {
     height: 400px;
     overflow-y: auto;
-    padding: 30px 20px 70px;
+    padding: 30px 20px 100px;
   }
 
   .chatbox .chat {
@@ -531,6 +536,7 @@ table td, th {
     max-width: 75%;
     font-size: 0.95rem;
     padding: 12px 16px;
+    white-space: pre-wrap;
     border-radius: 10px 10px 0 10px;
     background: #18637B;
   }
