--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
     <script src="{{url_for('static', filename='chatbox.js')}}" defer></script>
   </head>
-  <body class = "showchatbot">
+  <body>
     <!-- Div for the top navigation bar -->
     <div class="navbar">
       <div class="nav-container">
