--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
       <ul class="chatbox">
         <li class="chat incoming">
           <span class = "material-symbols-outlined">smart_toy</span>
-          <p>Placeholder Welcome</p>
+          <p>GPA Wizard Chat</p>
         </li>
       </ul>
       <div class = "messageinput">
