dashboard stuff pt 2

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,14 +14,18 @@
 </script>
 <div class = "dashboardContainer">
   <div class = "tableDiv">
-      <table class = "grades">
+    <h1 class = "gradeLabel">9th Grade</h1>
+      <table class = "9thGrade grades">
         <tr>
-          <th>9th Grade</th>
-          <th>10th Grade</th>
-          <th>11th Grade</th>
-          <th>12th Grade</th>
-        </tr>
+          <th>Class</th>
+          <th>Grade</th>
+          <th>Type</th>
+          <th>Credits</th>
+        </tr> 
       </table>
+    <h1 class = "gradeLabel">10th Grade</h1>
+    <h1 class = "gradeLabel">11th Grade</h1>
+    <h1 class = "gradeLabel">12th Grade</h1>
   </div>
   <div class = "addDiv">
 
