--- a/static/style.css
+++ b/static/style.css
@@ -91,10 +91,12 @@ body {
     font-weight: bold;
     color: black;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 .navLink:hover {
     text-decoration: underline;
+    font-size: 17px;
 }
 
 .container {
@@ -306,21 +308,90 @@ input[type = submit] {
   padding-right: 10px;
 }
 
+.dashboardContainer .tableDiv:hover{
+  margin-top: 10vh;
+  margin-left: 0.5vw;
+  height: 89vh;
+  width: 51vw;
+}
+
+.dashboardContainer .addDiv:hover{
+  margin-top: 10vh;
+  margin-left: 0.5vw;
+  height: 49vh;
+  width: 48vw;
+}
+
+.dashboardContainer .infoDiv:hover{
+  margin-top: 1vh;
+  margin-left: 0.5vw;
+  height: 40vh;
+  width: 48vw;
+}
+
 .tableDiv {
   display: flex;
   flex-direction: column;
   float: left;
-  margin-top: 10%;
-  background-image: linear-gradient(#0c5460, rgb(31, 41, 54));
-  height: 100vh;
-  width: 33%;
+  margin-top: 11vh;
+  margin-left: 1vw;
+  background:#c2ffdd;
+  height: 87vh;
+  width: 50vw;
+  border-radius: 10px;
+  overflow-y: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.3s ease;
+}
+
+.addDiv {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  margin-top: 11vh;
+  margin-left: 2vh;
+  height: 47vh;
+  width: 47vw;
+  background: #18637B;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.3s ease;
+  border-radius: 10px;
+}
+
+.infoDiv {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  margin-top: 2vh;
+  margin-left: 2vh;
+  height: 38vh;
+  width: 47vw;
+  background: #18637B;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.3s ease;
+  border-radius: 10px;
+}
+
+
+.gradeLabel { 
+  padding-top: 1%;
+  padding-left: 2%;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .grades {
+  margin-left: 1%;
+  margin-right: 1%;
   align-items: center;
-  padding: 10%;
+  padding-inline: 2%;
   font-family: 'Roboto Mono', monospace;
-  background-color: ;
+  border: 3px solid #18637B;
+  border-radius: .4em;
+  border-spacing: 0px;
+}
+
+.grades th {
+  text-align: center;
 }
 
 /*KAUSHALS CSS STUFF FOR THE DASHBOARD*/
