--- a/static/style.css
+++ b/static/style.css
@@ -344,6 +344,44 @@ input[type = submit] {
   transition: 0.3s ease;
 }
 
+.emptyText {
+  color: grey;
+  font-family: 'Roboto Mono', monospace;
+  visibility: visible;
+  margin-left: 3%;
+}
+
+.gradeLabel { 
+  padding-top: 1%;
+  padding-left: 2%;
+  font-family: 'Roboto Mono', monospace;
+}
+
+.grades {
+  margin-left: 1%;
+  margin-right: 1%;
+  align-items: center;
+  padding-inline: 2%;
+  font-family: 'Roboto Mono', monospace;
+  margin-bottom: 1%;
+}
+
+.grades th {
+  text-align: left;
+  text-decoration: bold;
+  font-size: 20px;
+}
+
+.grades td {
+  text-align: left;
+  border: 3px solid #18637B;
+  border-spacing: 0 1px;
+}
+
+.grades td:hover {
+  background-color: #70ffb0;
+}
+
 .addDiv {
   display: flex;
   flex-direction: column;
@@ -372,26 +410,57 @@ input[type = submit] {
   border-radius: 10px;
 }
 
-
-.gradeLabel { 
+.addLabel {
   padding-top: 1%;
   padding-left: 2%;
   font-family: 'Roboto Mono', monospace;
 }
 
-.grades {
-  margin-left: 1%;
-  margin-right: 1%;
-  align-items: center;
-  padding-inline: 2%;
+.enter {
+  padding: 1%;
   font-family: 'Roboto Mono', monospace;
-  border: 3px solid #18637B;
-  border-radius: .4em;
-  border-spacing: 0px;
+  border-radius: 10px;
+  width: 50%;
+  border: none;
+  margin-bottom: 1%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.grades th {
-  text-align: center;
+.dropdown {
+  padding: 1%;
+  font-family: 'Roboto Mono', monospace;
+  border-radius: 10px;
+  width: 29%;
+  border: none;
+  margin-bottom: 1%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.year,
+.type {
+  margin-left: 5.5%;
+}
+
+.select:invalid {
+  color: grey;
+}
+
+.dropdownLabel {
+  padding: 1%;
+  font-family: 'Roboto Mono', monospace;
+  width: 30%;
+  margin-bottom: 1%;
+}
+
+.submitButton {
+  padding: 1.5%;
+  font-family: 'Roboto Mono', monospace;
+  border-radius: 10px;
+  width: 40%;
+  border: none;
+  margin-bottom: 1%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background: #3B8D61;
 }
 
 /*KAUSHALS CSS STUFF FOR THE DASHBOARD*/
