--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,52 +2,33 @@
 <script src="{{url_for('static', filename='dashboard.js')}}" defer></script>
 <div class = "dashboardContainer">
   <div class = "tableDiv">
-    <h1 class = "gradeLabel">9th Grade</h1>
-      <h5 class = "emptyText">Add a Class!</h5>
-      <table class = "freshmen grades">
-        <tr>
-          <th>Class</th>
-          <th>Grade</th>
-          <th>Credits</th>
-        </tr> 
-      </table>
-    <h1 class = "gradeLabel">10th Grade</h1>
-      <h5 class = "emptyText">Add a Class!</h5>
-      <table class = "sophomore grades">
-        <tr>
-          <th>Class</th>
-          <th>Grade</th>
-          <th>Credits</th>
-        </tr> 
-      </table>
-    <h1 class = "gradeLabel">11th Grade</h1>
-      <h5 class = "emptyText">Add a Class!</h5>
-      <table class = "junior grades">
-        <tr>
-          <th>Class</th>
-          <th>Grade</th>
-          <th>Credits</th>
-        </tr> 
-      </table>
-    <h1 class = "gradeLabel">12th Grade</h1>
-      <h5 class = "emptyText">Add a Class!</h5>
-      <table class = "senior grades">
-        <tr>
-          <th>Class</th>
-          <th>Grade</th>
-          <th>Credits</th>
-        </tr> 
-      </table>
+    {% for grade, classes in classes_by_grade.items() %}
+        <h1 class = "gradeLabel">{{grade}}th Grade</h1>
+        <table class = "{{grade}} grades">
+            <tr>
+            <th>Class</th>
+            <th>Grade</th>
+            <th>Credits</th>
+            </tr>
+            {% for class in classes %}
+            <tr>
+                <td>{{class.name}}</td>
+                <td>{{class.received_grade}}</td>
+                <td>{{class.credits}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    {% endfor %}
   </div>
   <div class = "addDiv">
-    <h1 class = "addLabel">Add Classes</h1>
-    <form id = "addClass">
+    <h1 class = "addLabel">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
+    <form id = "addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
       <div class = 'formClass' style="text-align: center;">
-          <input type = 'text' id = 'class' class = "classInput enter" name = 'Class', placeholder="Class Name" required>
+          <input type = 'text' id = 'class' class = "classInput enter" name = 'name' placeholder="Enter the class name" required>
           <br>
           <label for = "grade" class = "dropdownLabel">Grade Recieved:</label>
-          <select class = "grade dropdown" id="grade" name = "grade">
-            <option value = "" disabled selected>Select a Grade</option>
+          <select class = "grade dropdown" id="grade" name = "received_grade">
+            <option value = "" disabled selected>Select a grade</option>
             <option value="A">A</option>
             <option value="B+">B+</option>
             <option value="B">B</option>
@@ -58,11 +39,11 @@
             <option value="N">N</option>
           </select>
           <br>
-          <input type = 'text' id = 'credits' class = "creditInput enter" name = 'credit', placeholder="Number of Credits" required>
+          <input type = 'text' id = 'credits' class = "creditInput enter" name = 'credits', placeholder="Enter the number of credits" required>
           <br>
           <label for = "year" class = "dropdownLabel">Year Taken:</label>
-          <select class = "year dropdown" id="year" name = "year">
-            <option value = "" disabled selected>Select a Year</option>
+          <select class = "year dropdown" id="year" name = "grade_taken">
+            <option value = "" disabled selected>Select a year</option>
             <option value="9">9</option>
             <option value="10">10</option>
             <option value="11">11</option>
@@ -72,13 +53,14 @@
           <label for = "type" class = "dropdownLabel">Class Type:</label>
           <select class = "type dropdown" id="type" name = "type">
             <option value = "" disabled selected>Select a Type</option>
-            <option value="normal">Normal</option>
+            <option value="">Normal</option>
             <option value="AP">AP</option>
             <option value="Honors">Honors</option>
           </select>
           <br>
           <button type="submit" class="submitButton">Add</button>
       </div>
+    </form>
   </div>
   <div class = "infoDiv">
 
