--- a/templates/index.html
+++ b/templates/index.html
@@ -31,10 +31,9 @@
             <h2>How to Use!</h2>
             <p>Step 1: Create an account and login</p>
             <p>Step 2: Go to your dashboard</p>
-            <p>Step 3: Press the '+' on the respective grade to add a class taken that year</p>
-            <p>Step 4: fill out the form and press 'add class'</p>
-            <p>Step 5: Repeat steps 3-4 until you have put all the classes you want</p>
-            <p>Step 6: Press 'Download PDF' to download your GPA table</p>
+            <p>Step 3: fill out the form and press 'add class'</p>
+            <p>Step 4: Repeat steps 3 until you have put all the classes you want</p>
+            <p>Step 5: Press 'Download PDF' to download your GPA table</p>
         </div>
     </div>
 </div>
