--- a/static/style.css
+++ b/static/style.css
@@ -220,7 +220,9 @@ input[type = submit] {
 
 
 .flashes {
-  text-align: center
+  text-align: center;
+  z-index: 1000;
+  float: bottom;
 }
 
 
@@ -234,7 +236,6 @@ input[type = submit] {
   border-radius: 5px;
   text-align: center;
   display: inline-block;
-  z-index: 1000;
 }
 
 .info {
@@ -247,7 +248,6 @@ input[type = submit] {
   border-radius: 5px;
   text-align: center;
   display: inline-block;
-  z-index: 1000;
 }
 
 .mainScreen {
@@ -453,7 +453,7 @@ input[type = submit] {
   flex-direction: column;
   float: left;
   margin-top: 2vh;
-  margin-left: 1vh;
+  margin-left: 2vh;
   height: 38vh;
   width: 47vw;
   background: #18637B;
