--- a/static/style.css
+++ b/static/style.css
@@ -30,7 +30,7 @@ body {
 
 /* Initial style for the navbar */
 .navbar {
-  position: fixed;
+  /*position: fixed;*/
   top: 0; /* Move the navbar above the viewport initially */
   left: 0;
   width: 100%;
@@ -43,6 +43,8 @@ body {
     top: 0; /* Move the navbar back to its original position */
 }
 
+
+
 /* Add this CSS to handle navbar position for non-home pages */
 .homepage {
   top: -80px;
@@ -52,7 +54,7 @@ body {
 /* Initial style for the title */
 .mainTitle {
   font-family: 'Roboto Mono', monospace;
-  width: 97%;
+  width: 96.5%;
   font-size: 210px;
   text-align: center;
   margin-top: 120px; /* Add initial margin */
@@ -286,8 +288,9 @@ input[type = submit] {
 .bottomBar {
   display: flex;
   justify-content: space-between; /* Align items to the start and end of the container */
+  align-items: center;
   position: fixed;
-  bottom: -80px;
+  bottom: -90px;
   width: 100%;
   background-color: #9FFFCB;
   padding: 10px;
@@ -307,7 +310,7 @@ input[type = submit] {
   padding-left: 10px;
   padding-right: 10px;
 }
-
+/*
 .dashboardContainer .tableDiv:hover{
   margin-top: 10vh;
   margin-left: 0.5vw;
@@ -328,7 +331,50 @@ input[type = submit] {
   height: 40vh;
   width: 48vw;
 }
+*/
 
+.dashboardContainer{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.leftWidget {
+    display: flex;
+    flex-direction: column;
+    float: left;
+    background-color: #c2ffdd;
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    width: 50vw;
+    padding: 20px;
+}
+
+.rightWidgets {
+    display: flex; /* Remove flex: 1 */
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.topWidget,
+.bottomWidget {
+    background-color: #c2ffdd;
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: transform 0.3s ease-in-out;
+    flex: 1; /* Add flex: 1 */
+    margin-left: 10px; /* Add margin-left */
+    text-align: center;
+}
+
+.topWidget {
+    margin-bottom: 10px; /* Adjust margin to match bottom widget */
+}
+
+/*
 .tableDiv {
   display: flex;
   flex-direction: column;
@@ -343,7 +389,7 @@ input[type = submit] {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: 0.3s ease;
 }
-
+*/
 .emptyText {
   color: grey;
   font-family: 'Roboto Mono', monospace;
@@ -370,12 +416,14 @@ input[type = submit] {
   text-align: left;
   text-decoration: bold;
   font-size: 20px;
+  padding-right: 50px;
 }
 
 .grades td {
   text-align: left;
   border: 3px solid #18637B;
   border-spacing: 0 1px;
+  padding-right: 10px;
 }
 
 .grades td:hover {
@@ -386,10 +434,6 @@ input[type = submit] {
   display: flex;
   flex-direction: column;
   float: left;
-  margin-top: 11vh;
-  margin-left: 2vh;
-  height: 47vh;
-  width: 47vw;
   background: #18637B;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: 0.3s ease;
@@ -400,15 +444,14 @@ input[type = submit] {
   padding-top: 1%;
   padding-left: 2%;
   font-family: 'Roboto Mono', monospace;
-  text-align: center;
-  color: #fff;
+  text-align: center;;
 }
 
 .enter {
   padding: 1%;
+    width: 75%;
   font-family: 'Roboto Mono', monospace;
   border-radius: 10px;
-  width: 50%;
   border: none;
   margin-bottom: 1%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -419,7 +462,7 @@ input[type = submit] {
   padding: 1%;
   font-family: 'Roboto Mono', monospace;
   border-radius: 10px;
-  width: 52%;
+  width: 77%;
   border: none;
   margin-bottom: 1%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -464,33 +507,30 @@ input[type = submit] {
 
 .infoLabel {
   padding-top: 1%;
-  padding-left: 2%;
   font-family: 'Roboto Mono', monospace;
-  text-align: center; 
-  color: #fff;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .gpaText {
   font-family: 'Roboto Mono', monospace;
   text-align: center;
-  color: #fff;
 }
 
 .getPDF {
   font-family: 'Roboto Mono', monospace;
   text-align: center;
   border-radius: 10px;
-  padding: 1.5%;
-  width: 20%;
-  border: none;
-  display: block;
-  margin: auto;
+  align-self: center;
+  padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   background: #3B8D61;
   cursor:pointer;
   text-decoration: none;
   color:#000;
   transition: 0.3s;
+  margin: 20px;
 }
 
 .getPDF:hover {
@@ -578,6 +618,9 @@ input[type = submit] {
   align-content: center;
   font-family: 'Montserrat', sans-serif;
 }
+
+
+
 
 /*KAUSHALS CSS STUFF FOR THE DASHBOARD*/
   /* CSS for the popup form */
