--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,101 +1,82 @@
 {% extends "base.html" %} {% block content %}
+<script src="{{url_for('static', filename='dashboard.js')}}" defer></script>
 <div class = "dashboardContainer">
-  <div class = "tableDiv">
-    {% for grade, classes in classes_by_grade.items() %}
-        <h1 class = "gradeLabel">{{ grade }}th Grade</h1>
-        <h5 class = "emptyText">Add a Class!</h5>
-        <table class = "{{ grade }} grades">
-            <tr>
-            <th>Class</th>
-            <th>Grade</th>
-            <th>Credits</th>
-            </tr>
-            {% for class in classes %}
-            <tr>
-                <td>{{ class.full_name() }}</td>
-                <td>{{ class.received_grade }}</td>
-                <td>{{ class.credits }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    {% endfor %}
-    <script>const emptyTexts = document.querySelectorAll(".emptyText");
-      const gradeTables = document.querySelectorAll(".grades");
-      
-      emptyTexts.forEach(function(emptyText) {
-          emptyText.style.display = "none";
-      });
-      
-      function toggleVisibility() {
-          emptyTexts.forEach(function(emptyText, index) {
-              const table = gradeTables[index];
-              const rowCount = table.querySelectorAll("tr").length;
-              
-              if (rowCount > 1) {
-                  emptyText.style.display = "none";
-                  table.style.display = "table";
-              } else {
-                  emptyText.style.display = "block";
-                  table.style.display = "none";
-              }
-          });
-      }
-      toggleVisibility();</script> 
-  </div>
-  <div class = "addDiv">
-    <h1 class = "addLabel">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
-    <form id = "addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
-      <div class = 'formClass' style="text-align: center;">
-          <input type = 'text' id = 'class' class = "classInput enter" name = 'name' placeholder="Enter the class name" required>
-          <br>
-          <!-- <label for = "grade" class = "dropdownLabel">Grade Recieved:</label> -->
-          <select class = "grade dropdown" id="grade" name = "received_grade" required>
-            <option value = "" disabled selected class = "initChoice">Select your recieved grade</option>
-            <option value="A">A</option>
-            <option value="B+">B+</option>
-            <option value="B">B</option>
-            <option value="B-">B-</option>
-            <option value="C+">C+</option>
-            <option value="C">C</option>
-            <option value="C-">C-</option>
-            <option value="N">N</option>
-          </select>
-          <br>
-          <input type = 'text' id = 'credits' class = "creditInput enter" name = 'credits', placeholder="Enter the number of credits" required>
-          <br>
-          <!-- <label for = "year" class = "dropdownLabel">Year Taken:</label> -->
-          <select class = "year dropdown" id="year" name = "grade_taken" required>
-            <option value = "" disabled selected class = "initChoice">Select the year taken</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-          </select>
-          <br>
-          <!-- <label for = "type" class = "dropdownLabel">Class Type:</label> -->
-          <select class = "type dropdown" id="type" name = "type" required>
-            <option value = "" disabled selected class = "initChoice">Select the class type</option>
-            <option value="">Normal</option>
-            <option value="AP">AP</option>
-            <option value="Honors">Honors</option>
-          </select>
-          <br>
-          <button type="submit" class="submitButton">Add Class</button>
+    <div class="leftWidget">
+      <div class = "tableDiv">
+        {% for grade, classes in classes_by_grade.items() %}
+            <h1 class = "gradeLabel">{{ grade }}th Grade</h1>
+            <table class = "{{ grade }} grades">
+                <tr>
+                <th>Class     </th>
+                <th>Grade     </th>
+                <th>Credits     </th>
+                </tr>
+                {% for class in classes %}
+                <tr>
+                    <td>{{class.name}}</td>
+                    <td>{{class.received_grade}}</td>
+                    <td>{{class.credits}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        {% endfor %}
       </div>
-    </form>
-  </div>
-  <div class = "infoDiv">
-    <h1 class = "infoLabel">Your Report</h1>
-    <div class="reports">
-       {% if has_classes %}
-           <h2 class="gpaText">Unweighted GPA: {{ unweighted_gpa }}</h2>
-           <h2 class="gpaText">Weighted GPA: {{ weighted_gpa }}</h2>
-           <!-- prettier-ignore -->
-           <a class = "getPDF" href = "{{ url_for('dashboard.download_report') }}">Download PDF</a>
-        {% else %}
-           <h2 class="gpaText">Add a class to see your GPA!</h2>
-        {% endif %}
     </div>
-  </div>
+    <div class="rightWidgets">
+      <div class = "topWidget">
+        <h1 class = "addLabel">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
+        <form id = "addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
+
+              <input type = 'text' id = 'class' class = "enter" name = 'name' placeholder="Enter the class name" required>
+              <br>
+              <!-- <label for = "grade" class = "dropdownLabel">Grade Recieved:</label> -->
+              <select class = "grade dropdown" id="grade" name = "received_grade" required>
+                <option value = "" disabled selected class = "initChoice">Select your recieved grade</option>
+                <option value="A">A</option>
+                <option value="B+">B+</option>
+                <option value="B">B</option>
+                <option value="B-">B-</option>
+                <option value="C+">C+</option>
+                <option value="C">C</option>
+                <option value="C-">C-</option>
+                <option value="N">N</option>
+              </select>
+              <br>
+              <input type = 'text' id = 'credits' class = "enter" name = 'credits', placeholder="Enter credits">
+              <br>
+              <!-- <label for = "year" class = "dropdownLabel">Year Taken:</label> -->
+              <select class = "year dropdown" id="year" name = "grade_taken" required>
+                <option value = "" disabled selected class = "initChoice">Year</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+              </select>
+              <br>
+              <!-- <label for = "type" class = "dropdownLabel">Class Type:</label> -->
+              <select class = "type dropdown" id="type" name = "type" required>
+                <option value = "" disabled selected class = "initChoice">Class Type</option>
+                <option value="">Normal</option>
+                <option value="AP">AP</option>
+                <option value="Honors">Honors</option>
+              </select>
+              <br>
+              <button type="submit" class="submitButton">Add Class</button>
+
+        </form>
+      </div>
+
+      <div class = "bottomWidget">
+        <h1 class = "infoLabel">Your Report</h1>
+        {% if has_classes %}
+          <h2 class="gpaText">Unweighted GPA: {{ unweighted_gpa }}</h2>
+          <h2 class="gpaText">Weighted GPA: {{ weighted_gpa }}</h2>
+          <!-- prettier-ignore -->
+          <a class = "getPDF" href = "{{ url_for('dashboard.download_report') }}">Download PDF</a>
+    {% endif %}
+      </div>
+    </div>
 </div>
+
+
 {% endblock %}
