--- a/static/style.css
+++ b/static/style.css
@@ -341,8 +341,18 @@ input[type = submit] {
   margin-bottom: 25px;
 }
 
+@keyframes slideinLeft {
+    from {
+        display: none;
+    }
+    to{
+        transform: translateX(0);
+        display: flex;
+    }
+
+}
+
 .leftWidget {
-    display: flex;
     flex-direction: column;
     float: left;
     background-color: #c2ffdd;
@@ -350,6 +360,13 @@ input[type = submit] {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     width: 50vw;
     padding: 20px;
+    display: none;
+    transform: translateX(-200%);
+}
+
+.leftWidget.visible{
+    display: flex;
+    animation: slideinLeft 1000ms forwards;
 }
 
 .rightWidgets {
@@ -358,21 +375,97 @@ input[type = submit] {
     justify-content: space-between;
 }
 
-.topWidget,
-.bottomWidget {
+.classWidget{
     background-color: #c2ffdd;
+    width: 600px;
     border-radius: 15px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     transition: transform 0.3s ease-in-out;
     flex: 1; /* Add flex: 1 */
-    margin-left: 10px; /* Add margin-left */
+    margin-left: 30px; /* Add margin-left */
     text-align: center;
+    font-size: 25px;
+    margin-bottom: 30px;
+    display: block;
+
 }
 
-.topWidget {
-    margin-bottom: 10px; /* Adjust margin to match bottom widget */
+
+@keyframes fadeout {
+    from {
+        display: block;
+
+    }
+    to {
+
+        opacity: 0;
+
+    }
 }
+
+.classWidget.fadeout{
+    animation: fadeout 250ms;
+    display: none;
+}
+
+
+@keyframes slideinRightClass {
+    from {
+        display: none;
+    }
+    to{
+        transform: translateX(0);
+        display: block;
+    }
+
+}
+
+.classWidget.visible{
+    background-color: #c2ffdd;
+    width: 300px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: transform 0.3s ease-in-out;
+    flex: 1; /* Add flex: 1 */
+    margin-left: 30px; /* Add margin-left */
+    text-align: center;
+    margin-bottom: 30px;
+    display: block;
+    animation: slideinRightClass 1000ms forwards;
+}
+
+
+@keyframes slideinRight {
+    from {
+        display: none;
+    }
+    to{
+        transform: translateX(0);
+        display: flex;
+    }
+
+}
+
+.bottomWidget {
+    flex-direction: column;
+    float: left;
+    background-color: #c2ffdd;
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-left: 30px;
+    width: 300px;
+    padding: 20px;
+    display: none;
+    transform: translateX(200%);
+}
+
+.bottomWidget.visible{
+    display: flex;
+    animation: slideinRight 1000ms forwards;
+}
+
 
 /*
 .tableDiv {
@@ -441,8 +534,6 @@ input[type = submit] {
 }
 
 .addLabel {
-  padding-top: 1%;
-  padding-left: 2%;
   font-family: 'Roboto Mono', monospace;
   text-align: center;;
 }
@@ -478,10 +569,12 @@ input[type = submit] {
   font-family: 'Roboto Mono', monospace;
   border-radius: 10px;
   width: 40%;
+  margin-top: 3%;
   border: none;
   margin-bottom: 1%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   background: #3B8D61;
+  color: white;
   cursor:pointer;
   font-size: 16px;
   transition: 0.3s;
@@ -528,7 +621,7 @@ input[type = submit] {
   background: #3B8D61;
   cursor:pointer;
   text-decoration: none;
-  color:#000;
+  color: white;
   transition: 0.3s;
   margin: 20px;
 }
