--- a/static/style.css
+++ b/static/style.css
@@ -495,10 +495,35 @@ input[type = submit] {
   color: red;
   border: 0.2vmin solid red;
   border-radius: 25px;
+  transition: 0.3s;
 }
 
 .delete:hover {
   cursor:pointer;
+  background-color: (228,231,223, 0.5);
+  animation: rotateAnimation 0.3s forwards;
+}
+
+@keyframes rotateAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.delete:not(hover) {
+  animation: rotateBack 0.3s forwards;
+}
+
+@keyframes rotateBack {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
 
 .gradeLabel { 
@@ -532,6 +557,11 @@ input[type = submit] {
 
 .grades td:hover {
   background-color: #70ffb0;
+  font-weight: 600;
+}
+
+.grades td:nth-child(4):hover {
+  background-color: transparent;
 }
 
 .addDiv {
