--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
                     <td>{{class.received_grade}}</td>
                     <td>{{class.credits}}</td>
                     <td style="border: none">
-                        <span class = "material-symbols-outlined delete" id = "deleteButton">close</span>
+                        <span class = "material-symbols-outlined delete" id = "deleteButton">delete</span>
                     </td>
                     <script>
                       document.getElementById('deleteButton').addEventListener('click', function() {
