--- a/static/style.css
+++ b/static/style.css
@@ -222,11 +222,53 @@ input[type = submit] {
 
 
 .flashes {
+  display: flex;
+  font-family: 'Roboto Mono', monospace;
   text-align: center;
-  z-index: 1000;
-  float: bottom;
+  width: 10vw;
+  border-radius: 10px;
+  margin: 20px auto 0;
+  align-items: center;
 }
 
+.flashes p {
+  flex: 1;
+  margin: 0;
+  text-align: center;
+  padding: 15px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.flashes span {
+  margin-left: auto;
+  padding: 13px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  font-size: 25px;
+  transition: 0.1s;
+}
+
+.flashes span:hover {
+  font-size: 30px;
+  padding: 10.5px;
+  cursor:pointer;
+}
+
+.info,
+.error {
+  color: white;
+  border: 3px solid white;
+}
+
+.info {
+  background-color: #000;
+}
+
+.error {
+  background-color: red;
+}
+/* 
 
 .error {
   font-family: 'Montserrat', sans-serif;
@@ -238,9 +280,14 @@ input[type = submit] {
   border-radius: 5px;
   text-align: center;
   display: inline-block;
+  position:absolute;
+  z-index: 1;
 }
 
 .info {
+  background-color: #080F0F;
+  color: white;
+  overflow: hidden;
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   background-color: #d1ecf1;
@@ -250,7 +297,7 @@ input[type = submit] {
   border-radius: 5px;
   text-align: center;
   display: inline-block;
-}
+} */ */
 
 .mainScreen {
   height: 650px;
