made it say 'Sending' + fixed placeholders.

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,12 +46,12 @@
     <!-- div for the chatbot -->
     <div class="chatbot">
       <header>
-        <h2>placeholder</h2>
+        <h2>GPA Wizard Chatbot</h2>
       </header>
       <ul class="chatbox">
         <li class="chat incoming">
           <span class = "material-symbols-outlined">smart_toy</span>
-          <p>GPA Wizard Chat</p>
+          <p>Welcome to the GPA Wizard interactive chatbot! How may I help you?</p>
         </li>
       </ul>
       <div class = "messageinput">
